# hackathon

./: .gitignore  AGENTCORE_DEPLOYMENT.md  AGENTS_COMPLETE_SUMMARY.md  AGENTS_CREATED.md  AGENTS_OVERVIEW.md  AGENT_DEPLOYMENT_READINESS_REPORT.md  ARBITRATION_PERFORMANCE_ANALYSIS.md  ARBITRATOR_DEPLOYMENT.md  ARBITRATOR_PROMPT.md  ARCHITECTURE_DIAGRAM.md  ASYNC_POLLING_SOLUTION.md  AWS_AGENTCORE_ARCHITECTURE.md  AWS_BEDROCK_AGENTS_ARCHITECTURE.md  AWS_CONNECTION_SETUP.md  AWS_DEPLOYMENT_GUIDE.md  CHECKPOINT_7_VERIFICATION_REPORT.md  COMPLETE_SKYMARSHAL_WORKFLOW_REPORT.md  CONFIGURATION_MANAGEMENT.md  COST_ANALYSIS_REPORT.md  DATABASE_PACKAGE_COMPLETE.md  DAY1_COMPLETION.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOY_ASYNC_SOLUTION.md  DEPRECATED_BEDROCK_AGENTS.md  DYNAMODB_ANALYSIS.md  DYNAMODB_SCHEMA_RECOMMENDATIONS.md  ERROR_HANDLING_GUIDE.md  FILES_CREATED.md  FINAL_SOLUTION_SUMMARY.md  FIX_VERIFICATION_REPORT.md  FRONTEND_DEPLOYMENT_UPDATE.md  GSI_REQUIREMENTS_SUMMARY.md  GSI_RETRY_LOGIC_IMPLEMENTATION_GUIDE.md  INPUT_TOKEN_REDUCTION_GUIDE.md  INTEGRATION_SUMMARY.md  MIGRATION_SUMMARY.md  MODEL_DISTRIBUTION.md  MODEL_DISTRIBUTION_BEDROCK.md  MODEL_VISUAL.md  (+145 more)
skymarshal_agents_new/skymarshal/: .bedrock_agentcore.yaml  AGENT_MIGRATION_COMPLETE.md  AGENT_OPTIMIZATION_PLAN.md  AGENT_UPDATE_SUMMARY.md  API_DEPLOYMENT_GUIDE.md  API_DEPLOYMENT_SUCCESS.md  API_GATEWAY_TIMEOUT_SOLUTION.md  API_IMPLEMENTATION_COMPLETE.md  API_QUICK_REFERENCE.md  API_VERIFICATION_COMPLETE.md  ARBITRATOR_ENHANCEMENTS_NEEDED.md  ARBITRATOR_ENHANCEMENT_COMPLETION.md  CHECKPOINT_6_REPORT.md  (+68 more)
(+483 files in other folders)
