
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skymarshal"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "aws-opentelemetry-distro>=0.10.0",
    "bedrock-agentcore>=1.2.0",
    "bedrock-agentcore-starter-toolkit>=0.2.8",
    "langchain>=1.2.7",
    "langchain-aws>=1.2.2",
    "langchain-mcp-adapters>=0.2.1",
    "langgraph>=1.0.7",
    "mcp>=1.26.0",
    "numpy>=2.2,<2.3",
    "python-dotenv>=1.2.1",
    "tiktoken>=0.11.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.151.4",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
